--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,6 @@
         <item name="android:fontFamily">@font/poppins</item>
         <item name="android:letterSpacing">0.1</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:radius">10dp</item>
         <item name="android:background">@drawable/rounded_input</item>
         <item name="android:layout_width">350dp</item>
         <item name="android:layout_height">60dp</item>
@@ -21,13 +20,28 @@
     <style name="button">
         <item name="android:fontFamily">@font/poppins</item>
         <item name="android:textColor">@color/white</item>
-        <item name="borderWidth">10dp</item>
         <item name="android:background">@drawable/rounded_button</item>
         <item name="android:layout_width">350dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:letterSpacing">0.05</item>
         <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="loader">
+        <item name="android:progressTint">@color/coral</item>
+        <item name="android:indeterminateTint">@color/coral</item>
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
+    </style>
+
+    <style name="dropdown">
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/rounded_dropdown</item>
+        <item name="android:layout_width">350dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:paddingLeft">20dp</item>
     </style>
 
 </resources>
