completed ui for the parking entry screen

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:textColor="@color/white"
         android:contentDescription="@string/app_name"
         android:text="@string/logo"
+        android:fontFamily="@font/poppins_extralight"
         android:textAlignment="center"
         android:textSize="96sp"
         android:typeface="normal"
