--- a/app/src/main/res/layout/dropdown_spinner.xml
+++ b/app/src/main/res/layout/dropdown_spinner.xml
@@ -1,5 +1,5 @@
-<!-- res/layout/spinner_item_layout.xml -->
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
-    style="@style/SpinnerItemStyle" />
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text1"
+    style="@style/SpinnerItemStyle"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
