--- a/app/src/main/res/layout/parking_entry.xml
+++ b/app/src/main/res/layout/parking_entry.xml
@@ -6,4 +6,107 @@
     android:layout_height="match_parent"
     tools:context=".ui.ParkingEntryScreen">
 
+    <Button
+        android:id="@+id/logoutBtn"
+        style="@style/logoutBtn"
+        android:layout_width="93dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="14dp"
+        android:text="@string/logout"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/vNumber"
+        style="@style/input"
+        android:layout_marginTop="80dp"
+        android:autofillHints="name"
+        android:ems="10"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:hint="@string/enter_vehicle_number"
+        android:inputType="text"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/recent"
+        android:layout_width="42dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="220dp"
+        android:contentDescription="@string/app_name"
+        android:text="@string/or"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="340dp"
+        android:contentDescription="@string/app_name"
+        android:text="@string/recent_parking_s"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.081"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/submitBtn"
+        style="@style/button"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vNumber" />
+
+    <Button
+        android:id="@+id/scanBtn"
+        style="@style/button"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="110dp"
+        android:text="@string/scan_vehicle_number"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vNumber" />
+
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="366dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <ListView
+            android:id="@+id/parkingList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:divider="@null"
+            android:dividerHeight="1dp"
+            android:scrollbars="vertical" />
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
