--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <item name="android:background">@color/deepBlue</item>
         <item name="android:button">@color/coral</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/poppins_thin</item>
+        <item name="android:fontFamily">@font/poppins</item>
     </style>
 
     <style name="input">
@@ -36,12 +36,28 @@
     </style>
 
     <style name="dropdown">
-        <item name="android:fontFamily">@font/poppins</item>
-        <item name="android:textColor">@color/black</item>
         <item name="android:background">@drawable/rounded_dropdown</item>
         <item name="android:layout_width">350dp</item>
         <item name="android:layout_height">60dp</item>
-        <item name="android:paddingLeft">20dp</item>
+    </style>
+
+    <style name="SpinnerItemStyle">
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/rounded_dropdown</item>
+        <item name="android:padding">10sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="logoutBtn">
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:layout_width">350dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
 </resources>
