--- a/app/src/main/res/layout/select_screen.xml
+++ b/app/src/main/res/layout/select_screen.xml
@@ -14,6 +14,7 @@
         android:contentDescription="@string/app_name"
         android:text="@string/logo"
         android:textAlignment="center"
+        android:fontFamily="@font/poppins_extralight"
         android:textSize="96sp"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
