--- a/parking_boy_app/app/src/main/res/layout/parking_entry.xml
+++ b/parking_boy_app/app/src/main/res/layout/parking_entry.xml
@@ -7,19 +7,19 @@
     tools:context=".ui.ParkingEntryScreen">
 
 
-        <Button
-            android:id="@+id/logoutBtn"
-            style="@style/logoutBtn"
-            android:layout_width="93dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="14dp"
-            android:text="@string/logout"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.95"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/logoutBtn"
+        style="@style/logoutBtn"
+        android:layout_width="93dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="14dp"
+        android:text="@string/logout"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/vNumber"
@@ -111,12 +111,20 @@
 
         <androidx.camera.view.PreviewView
             android:id="@+id/cameraPreview"
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="@style/loader"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:indeterminate="true"
+            android:visibility="gone" />
 
     </LinearLayout>
 
