--- a/parking_boy_app/app/src/main/res/values-night/themes.xml
+++ b/parking_boy_app/app/src/main/res/values-night/themes.xml
@@ -85,4 +85,18 @@
         <item name="android:background">@color/coral</item>
     </style>
 
+    <style name="parkingText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:letterSpacing">0.1</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="toggleBtn">
+        <item name="android:colorControlActivated">@color/coral</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
 </resources>
